--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,27 @@ body {
 #other-services a:hover {
     background-color: #45a049;
 }
+#homepage-button-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+#homepage-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+	margin: 0 auto 20px;
+}
+#info-container {
+    text-align: center;
+    margin-top: 20px;
+	max-width: 600px;
+    margin: 0 auto 20px; /* Added bottom margin for spacing */
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+}
